appId: com.comapeo.dev
env:
  CAT: MAIN
---
- setLocation:
    latitude: 48.8530
    longitude: 2.3499
- tapOn:
    id: 'tabBarButtonMap'
- assertVisible:
    id: '${CAT}.sync-icon'
- assertVisible:
    id: '${CAT}.drawer-icon'
- assertVisible:
    label: 'Sync button, drawer icon, and plus button all appear on the map'
    id: '${CAT}.add-observation-btn'
- tapOn:
    id: '${CAT}.add-observation-btn'
- assertVisible:
    label: 'Create observation button goes to categories screen from Home map screen'
    id: '${CAT}.categories-scrn'
- back
- tapOn: 'Discard Observation'
