appId: com.comapeo.dev
env:
  CAT: OBS
  SUBCAT: MAIN
---
- setLocation:
    latitude: 48.8550
    longitude: 2.3519
- tapOn:
    id: '${SUBCAT}.add-observation-btn'
- tapOn: '.*Gathering Site.*'
- tapOn: '.*Details.*'
- assertVisible:
    label: 'Add details button opens Details screen'
    id: 'OBS.add-details-scrn'
- assertVisible:
    label: 'Back button visible'
    id: '${SUBCAT}.header-back-btn'
- assertVisible:
    text: '.*Question [0-9] of [0-9].*'
- assertVisible:
    text: '.*[Next | Done].*'
- assertVisible:
    text: '.*What is gathered here?.*'
# - assertVisible:
#     label: 'Prompt displays name of detail field with placeholder/help text below'
#     text: '.*firewood.*'
- assertVisible:
    label: 'Cursor is visible and on-screen keyboard is open by default'
    id: '${CAT}.details-inp'
    focused: true
- tapOn:
    id: '${SUBCAT}.header-back-btn'
- assertVisible:
    label: 'Back arrow when on question 1 of 1 returns to new observation screen'
    text: '.*New Observation.*'
- tapOn: '.*Details.*'
- tapOn:
    id: '${CAT}.details-inp'
- inputText:
    label: 'Can input text into the text field'
    text: 'Some details'
- runFlow:
    when:
      visible: '.*Question 1 of 1.*'
    commands:
      - assertVisible: '.*Done.*'
- tapOn: '.*Done.*'
- assertVisible:
    label: 'Tapping done returns to new observation screen'
    text: '.*New Observation.*'
- tapOn:
    id: '${CAT}.edit-save-btn'
- tapOn:
    id: '${SUBCAT}.header-back-btn'
