appId: com/comapeo
---
- tapOn:
    id: 'tabBarButtonObservationsList'
- tapOn:
    id: 'observationListItem:0'
- tapOn:
    id: 'editButton'
- assertVisible:
    label: 'When editing, observation description field is visible'
    id: 'observationDescriptionField'
- tapOn:
    id: 'observationDescriptionField'
- inputText:
    label: 'When editing, can input a description'
    text: 'Test Description'
- tapOn:
    id: 'OBS.close-edit'
- assertVisible:
    label: 'Warning to Discard Changes is visible'
    text: 'Discard changes?'
- tapOn:
    text: 'Discard Changes'
- tapOn:
    text: 'Discard Changes'
