appId: com.comapeo.dev
env:
  CAT: OBS
  SUBCAT: MAIN
---
- setLocation:
    latitude: 48.8570
    longitude: 2.3529
- tapOn:
    id: '${SUBCAT}.add-observation-btn'
- tapOn: '.*Lake.*'
- tapOn:
    id: '${CAT}.edit-save-btn'
- tapOn:
    id: '${SUBCAT}.header-back-btn'
- setLocation:
    latitude: 48.8590
    longitude: 2.3544
- tapOn:
    id: '${SUBCAT}.add-observation-btn'
- tapOn: '.*Clay.*'
- tapOn:
    id: '${CAT}.edit-save-btn'
- tapOn:
    id: '${SUBCAT}.header-back-btn'
- takeScreenshot: ObservationDots
#- this is very dependent on which device you use and is too flaky to be used generally
# - tapOn:
#     point: '46%,49%'
# - assertVisible:
#     label: 'Point goes to the View observation screen for that point'
#     text: 'Gathering Site'
# - tapOn:
#     id: '${SUBCAT}.header-back-btn'
# - assertVisible:
#     label: 'Back button returns to Home map screen'
#     id: '${SUBCAT}.mapbox-map-view'
- tapOn:
    id: 'tabBarButtonObservationsList'
- assertVisible:
    label: 'Observations list button goes to Observations list screen from Map screen'
    id: '${CAT}.list-scrn'
- tapOn:
    id: 'tabBarButtonCamera'
- tapOn:
    id: 'tabBarButtonObservationsList'
- assertVisible:
    label: 'Observations list button goes to Observations list screen from Camera screen'
    id: '${CAT}.list-scrn'
- assertVisible: '^(?:[1-5]?[0-9] seconds ago|[1-5]?[0-9] minutes ago)$'
- assertVisible: '.*Lake.*'
- assertVisible: '.*Clay.*'
- assertVisible: '.*Gathering Site.*'
- assertVisible: '.*Threat.*'
- assertVisible:
    id: '${CAT}.Clay-list-icon'
- assertVisible:
    id: 'OBS.Gathering Site-list-icon'
- assertVisible:
    id: '${CAT}.Threat-list-icon'
- assertVisible:
    label: 'Observation names, time captures, thumbnails and icons display as expected on the list screen'
    id: '${CAT}.Lake-list-icon'
- tapOn: '.*Clay.*'
- assertVisible: '.*Clay.*'
- assertVisible: '.*^[A-Z][a-z]{2} (0?[1-9]|[12][0-9]|3[01]), (20[2-9][4-9]|2[1-9][0-9]{2}).*'
- assertVisible:
    label: 'Observation names, time captures, thumbnails and icons display as expected on the show screen'
    id: '${CAT}.Clay-view-icon'
- tapOn:
    id: '${SUBCAT}.header-back-btn'
- assertVisible:
    label: 'Back button returns to Observations list screen'
    id: '${CAT}.list-scrn'
- tapOn:
    id: '${SUBCAT}.header-back-btn'
- assertVisible:
    label: 'Back button returns to Map screen'
    id: '${SUBCAT}.mapbox-map-view'
